// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute evidence form needing response, renders correctly 1`] = `
<div>
  <div
    class="woocommerce-card"
  >
    <div
      class="woocommerce-card__header"
    >
      <div
        class="woocommerce-card__title-wrapper"
      >
        <h2
          class="woocommerce-card__title woocommerce-card__header-item"
        >
          General Evidence
        </h2>
      </div>
    </div>
    <div
      class="woocommerce-card__body"
    >
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-textarea-control-0"
          >
            Product Description
          </label>
          <textarea
            class="components-textarea-control__input"
            id="inspector-textarea-control-0"
            rows="4"
          />
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-text-control-0"
          >
            Customer Name
          </label>
          <input
            class="components-text-control__input"
            id="inspector-text-control-0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-text-control-1"
          >
            Customer Email
          </label>
          <input
            class="components-text-control__input"
            id="inspector-text-control-1"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-text-control-2"
          >
            Customer IP Address
          </label>
          <input
            class="components-text-control__input"
            id="inspector-text-control-2"
            type="text"
            value="127.0.0.1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="woocommerce-card"
  >
    <div
      class="woocommerce-card__header"
    >
      <div
        class="woocommerce-card__title-wrapper"
      >
        <h2
          class="woocommerce-card__title woocommerce-card__header-item"
        >
          Additional Details
        </h2>
      </div>
    </div>
    <div
      class="woocommerce-card__body"
    >
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-textarea-control-1"
          >
            Additional Details
          </label>
          <textarea
            class="components-textarea-control__input"
            id="inspector-textarea-control-1"
            rows="4"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="woocommerce-card"
  >
    <div
      class="woocommerce-card__body"
    >
      <p>
        When you submit your evidence, we'll format it and send it to the cardholder's bank, then email you once the dispute has been decided.
      </p>
      <p>
        <strong>
          Evidence submission is final.
        </strong>
         
        You can also save this evidence for later instead of submitting it immediately.
         
        <strong>
          We will automatically submit any saved evidence at the due date.
        </strong>
      </p>
      <div
        class="woocommerce-card__footer"
      >
        <button
          class="components-button is-button is-primary is-large"
          type="button"
        >
          Submit Evidence
        </button>
        <button
          class="components-button is-button is-default is-large"
          type="button"
        >
          Save For Later
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dispute evidence form not needing response, renders correctly 1`] = `
<div>
  <div
    class="woocommerce-card"
  >
    <div
      class="woocommerce-card__header"
    >
      <div
        class="woocommerce-card__title-wrapper"
      >
        <h2
          class="woocommerce-card__title woocommerce-card__header-item"
        >
          General Evidence
        </h2>
      </div>
    </div>
    <div
      class="woocommerce-card__body"
    >
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-textarea-control-2"
          >
            Product Description
          </label>
          <textarea
            class="components-textarea-control__input"
            disabled=""
            id="inspector-textarea-control-2"
            rows="4"
          />
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-text-control-3"
          >
            Customer Name
          </label>
          <input
            class="components-text-control__input"
            disabled=""
            id="inspector-text-control-3"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-text-control-4"
          >
            Customer Email
          </label>
          <input
            class="components-text-control__input"
            disabled=""
            id="inspector-text-control-4"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-text-control-5"
          >
            Customer IP Address
          </label>
          <input
            class="components-text-control__input"
            disabled=""
            id="inspector-text-control-5"
            type="text"
            value="127.0.0.1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="woocommerce-card"
  >
    <div
      class="woocommerce-card__header"
    >
      <div
        class="woocommerce-card__title-wrapper"
      >
        <h2
          class="woocommerce-card__title woocommerce-card__header-item"
        >
          Additional Details
        </h2>
      </div>
    </div>
    <div
      class="woocommerce-card__body"
    >
      <div
        class="components-base-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-textarea-control-3"
          >
            Additional Details
          </label>
          <textarea
            class="components-textarea-control__input"
            disabled=""
            id="inspector-textarea-control-3"
            rows="4"
          >
            winning_evidence
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dispute evidence page renders correctly 1`] = `
<div>
  <div
    class="wcpay-dispute-evidence woocommerce-payments-page is-narrow"
  >
    <div
      class="woocommerce-card"
    >
      <div
        class="woocommerce-card__header"
      >
        <div
          class="woocommerce-card__title-wrapper"
        >
          <h2
            class="woocommerce-card__title woocommerce-card__header-item"
          >
            Challenge Dispute
          </h2>
        </div>
      </div>
      <div
        class="woocommerce-card__body"
      >
        <div
          class="wcpay-dispute-info"
        >
          <div>
            <span
              class="wcpay-dispute-info-key"
            >
              Dispute date: 
            </span>
            <span
              class="wcpay-dispute-info-value"
            >
              Nov 1, 2019
            </span>
          </div>
          <div>
            <span
              class="wcpay-dispute-info-key"
            >
              Disputed amount: 
            </span>
            <span
              class="wcpay-dispute-info-value"
            >
              $10.00 USD
            </span>
          </div>
          <div>
            <span
              class="wcpay-dispute-info-key"
            >
              Respond by: 
            </span>
            <span
              class="wcpay-dispute-info-value"
            >
              Nov 8, 2019 - 2:46AM
            </span>
          </div>
          <div>
            <span
              class="wcpay-dispute-info-key"
            >
              Reason: 
            </span>
            <span
              class="wcpay-dispute-info-value"
            >
              Fraudulent
            </span>
          </div>
          <div>
            <span
              class="wcpay-dispute-info-key"
            >
              Transaction ID: 
            </span>
            <span
              class="wcpay-dispute-info-value"
            >
              <a
                data-link-type="wc-admin"
                href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="woocommerce-card"
    >
      <div
        class="woocommerce-card__header"
      >
        <div
          class="woocommerce-card__title-wrapper"
        >
          <h2
            class="woocommerce-card__title woocommerce-card__header-item"
          >
            General Evidence
          </h2>
        </div>
      </div>
      <div
        class="woocommerce-card__body"
      >
        <div
          class="components-base-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-textarea-control-8"
            >
              Product Description
            </label>
            <textarea
              class="components-textarea-control__input"
              id="inspector-textarea-control-8"
              rows="4"
            />
          </div>
        </div>
        <div
          class="components-base-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-text-control-12"
            >
              Customer Name
            </label>
            <input
              class="components-text-control__input"
              id="inspector-text-control-12"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="components-base-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-text-control-13"
            >
              Customer Email
            </label>
            <input
              class="components-text-control__input"
              id="inspector-text-control-13"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="components-base-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-text-control-14"
            >
              Customer IP Address
            </label>
            <input
              class="components-text-control__input"
              id="inspector-text-control-14"
              type="text"
              value="127.0.0.1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="woocommerce-card"
    >
      <div
        class="woocommerce-card__header"
      >
        <div
          class="woocommerce-card__title-wrapper"
        >
          <h2
            class="woocommerce-card__title woocommerce-card__header-item"
          >
            Additional Details
          </h2>
        </div>
      </div>
      <div
        class="woocommerce-card__body"
      >
        <div
          class="components-base-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-textarea-control-9"
            >
              Additional Details
            </label>
            <textarea
              class="components-textarea-control__input"
              id="inspector-textarea-control-9"
              rows="4"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="woocommerce-card"
    >
      <div
        class="woocommerce-card__body"
      >
        <p>
          When you submit your evidence, we'll format it and send it to the cardholder's bank, then email you once the dispute has been decided.
        </p>
        <p>
          <strong>
            Evidence submission is final.
          </strong>
           
          You can also save this evidence for later instead of submitting it immediately.
           
          <strong>
            We will automatically submit any saved evidence at the due date.
          </strong>
        </p>
        <div
          class="woocommerce-card__footer"
        >
          <button
            class="components-button is-button is-primary is-large"
            type="button"
          >
            Submit Evidence
          </button>
          <button
            class="components-button is-button is-default is-large"
            type="button"
          >
            Save For Later
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
